<resources>
    <string name="app_name">Cabelereiro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="logar">Logar</string>
    <string name="perfil">Perfil</string>
    <string name="agendar">Agendar Serviço</string>
    <string name="historico">Histórico</string>
    <string name="unidade">Unidades</string>
    <string name="preco">Preço</string>
    <string name="profissional">Profissional</string>
    <string name="politica">Politica de Privacidade</string>
    <string name="sair">Sair</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="sexo">Sexo</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="telefone">Telefone</string>
    <string name="email">E-Mail</string>
    <string name="tipo">Tipo</string>
    <string name="logradouro">Logradouro</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="cep">CEP</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
</resources>