<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Perfil">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp" >

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/iconperfil"
        android:layout_gravity="center"
        android:id="@+id/tlPerfilImgLogin"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:layout_marginTop="10dp"
                android:id="@+id/tlPerfilNome"/>


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        android:hint="@string/cpf"
        android:layout_marginTop="10dp"
        android:id="@+id/tlPerfilCpf"/>


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        android:hint="@string/sexo"
        android:layout_marginTop="10dp"
        android:id="@+id/tlPerfilSexo"/>


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        android:hint="@string/telefone"
        android:layout_marginTop="10dp"
        android:id="@+id/tlPerfilTelefone"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        android:id="@+id/tlPerfilEmail"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
        android:hint="@string/tipo"
        android:layout_marginTop="10dp"
        android:id="@+id/tlPerfilTipo"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
        android:hint="@string/logradouro"
        android:layout_marginTop="10dp"
        android:id="@+id/tlPerfilLogradouro"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
        android:hint="@string/numero"
        android:layout_marginTop="10dp"
        android:id="@+id/tlPerfilNumero"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
        android:hint="@string/cep"
        android:layout_marginTop="10dp"
        android:id="@+id/tlPerfilCep"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/bairro"
                  android:layout_marginTop="10dp"
                  android:id="@+id/tlPerfilBairro"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/cidade"
                  android:layout_marginTop="10dp"
                  android:id="@+id/tlPerfilCidade"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/estado"
                  android:layout_marginTop="10dp"
                  android:id="@+id/tlPerfilEstado"/>


        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
        android:text="Atualizar"
        android:id="@+id/tlPerfilAtualizar"/>,




    </LinearLayout>

</ScrollView>