<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login"
        android:orientation="vertical"
android:background="@drawable/backgroundddddd">

    <ImageView android:layout_width="300dp"
               android:layout_height="220dp"
    android:src="@drawable/userrrr"
    android:layout_margin="60dp"
    android:layout_gravity="center"
    android:id="@+id/loginLogo"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:inputType="text"
              android:hint="@string/login"
              android:textColor="@color/Preto"
    android:id="@+id/tlLogintxtLogin"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:inputType="textPassword"
            android:hint="@string/senha"
              android:textColor="@color/Preto"
    android:id="@+id/tlLogintxtSenha"/>


    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logar"
            android:layout_marginTop="50dp"
            android:layout_margin="10dp"
    android:id="@+id/tlLoginbtnLogar"/>

<Button  android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/cadastrar"
         android:layout_marginTop="50dp"
         android:layout_margin="10dp"
android:id="@+id/tlLoginbtnCadastrar"/>


</LinearLayout>